# Sparkz-AssetFlow

./: .gitignore  AGENTS.md  Makefile  README.md  WHATS_LEFT.md  db-schema.txt  docker-compose.yml
backend/: .env.example  _start_server.bat  pyproject.toml
backend/apps/activity/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/activity/migrations/: 0001_initial.py
backend/apps/assets/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/assets/migrations/: 0001_initial.py
backend/apps/audits/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/audits/migrations/: 0001_initial.py
backend/apps/audits/tests/: test_api.py  test_services.py
backend/apps/authentication/: admin.py  mail.py  models.py  otp.py  serializers.py  tokens.py  urls.py  views.py
backend/apps/authentication/migrations/: 0001_initial.py  0002_user_department.py
backend/apps/booking/: admin.py  models.py  permissions.py  serializers.py  views.py
backend/apps/booking/migrations/: 0001_initial.py  0002_btree_gist.py  0003_booking_booking_no_overlap.py
backend/apps/dashboard/: exports.py  serializers.py  urls.py  views.py
backend/apps/maintenance/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/organization/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/resource_allocation/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/config/: settings.py  urls.py
(+108 files in other folders)
