[project]
name = "backend"
version = "0.1.0"
description = "AssetFlow Django API — assets, allocation, booking, maintenance, audits"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.16",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.30.0",
    "faker>=30.0.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["migrations", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "DJ"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
